// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateOpinion /> when the query is on desktop should render a FOR opinion 1`] = `
Array [
  <div
    className="sc-bcXGCL klhoji toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cUzULY toasts-container toasts-container--top-left"
  />,
  <div
    className="sc-bcXGCL gbiIcr toasts-container toasts-container--top-right"
  />,
  <div
    className="sc-bcXGCL iAUFHT toasts-container toasts-container--bottom"
  />,
  <div
    className="sc-bcXGCL egFGdF toasts-container toasts-container--bottom-left"
  />,
  <div
    className="sc-bcXGCL iXsWAS toasts-container toasts-container--bottom-right"
  />,
  <div
    className="sc-bcXGCL jRgIZE cap-card"
  >
    <div
      className="sc-bcXGCL kIDeKu sc-fXqqsB kJyISH cap-tag"
      title=""
    >
      <span
        className="sc-bcXGCL dBdnLI cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="sc-bcXGCL kvrZpm"
    />
    <div
      className="sc-bcXGCL kOvzDP"
    >
      <div
        className="sc-bcXGCL lntwuc"
      >
        <div
          className="sc-bcXGCL jKhGNH sc-ckEbfr jQHsgw cap-avatar"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
          title="Agui le penseur"
        >
          <img
            alt="Agui le penseur"
            className="sc-bcXGCL exSVBv"
            src="<mock-value-for-field-\\"url\\">"
            style={
              Object {
                "objectFit": "cover",
              }
            }
            title="Agui le penseur"
          />
        </div>
        <div
          className="sc-bcXGCL VbuOr"
        >
          <p
            className="sc-bcXGCL bCkqIq cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="sc-bcXGCL dQJkPy cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL hQZIZa"
      >
        <h4
          className="sc-bcXGCL hCBCzh cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="sc-bcXGCL dBUDbw cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`<DebateOpinion /> when the query is on desktop should render an AGAINST opinion 1`] = `
Array [
  <div
    className="sc-bcXGCL klhoji toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cUzULY toasts-container toasts-container--top-left"
  />,
  <div
    className="sc-bcXGCL gbiIcr toasts-container toasts-container--top-right"
  />,
  <div
    className="sc-bcXGCL iAUFHT toasts-container toasts-container--bottom"
  />,
  <div
    className="sc-bcXGCL egFGdF toasts-container toasts-container--bottom-left"
  />,
  <div
    className="sc-bcXGCL iXsWAS toasts-container toasts-container--bottom-right"
  />,
  <div
    className="sc-bcXGCL jRgIZE cap-card"
  >
    <div
      className="sc-bcXGCL kIDeKu sc-fXqqsB kJyISH cap-tag"
      title=""
    >
      <span
        className="sc-bcXGCL dBdnLI cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="sc-bcXGCL kvrZpm"
    />
    <div
      className="sc-bcXGCL kOvzDP"
    >
      <div
        className="sc-bcXGCL lntwuc"
      >
        <div
          className="sc-bcXGCL jKhGNH sc-ckEbfr jQHsgw cap-avatar"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
          title="Agui le penseur"
        >
          <img
            alt="Agui le penseur"
            className="sc-bcXGCL exSVBv"
            src="<mock-value-for-field-\\"url\\">"
            style={
              Object {
                "objectFit": "cover",
              }
            }
            title="Agui le penseur"
          />
        </div>
        <div
          className="sc-bcXGCL VbuOr"
        >
          <p
            className="sc-bcXGCL bCkqIq cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="sc-bcXGCL dQJkPy cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL hQZIZa"
      >
        <h4
          className="sc-bcXGCL hCBCzh cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="sc-bcXGCL dBUDbw cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`<DebateOpinion /> when the query is on desktop should render with a read more link 1`] = `
Array [
  <div
    className="sc-bcXGCL klhoji toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cUzULY toasts-container toasts-container--top-left"
  />,
  <div
    className="sc-bcXGCL gbiIcr toasts-container toasts-container--top-right"
  />,
  <div
    className="sc-bcXGCL iAUFHT toasts-container toasts-container--bottom"
  />,
  <div
    className="sc-bcXGCL egFGdF toasts-container toasts-container--bottom-left"
  />,
  <div
    className="sc-bcXGCL iXsWAS toasts-container toasts-container--bottom-right"
  />,
  <div
    className="sc-bcXGCL enPTBa cap-card"
  >
    <div
      className="sc-bcXGCL kIDeKu sc-fXqqsB kJyISH cap-tag"
      title=""
    >
      <span
        className="sc-bcXGCL dBdnLI cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="sc-bcXGCL kOvzDP"
    >
      <div
        className="sc-bcXGCL lntwuc"
      >
        <div
          className="sc-bcXGCL jKhGNH sc-ckEbfr jQHsgw cap-avatar"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
          title="Agui le penseur"
        >
          <img
            alt="Agui le penseur"
            className="sc-bcXGCL exSVBv"
            src="<mock-value-for-field-\\"url\\">"
            style={
              Object {
                "objectFit": "cover",
              }
            }
            title="Agui le penseur"
          />
        </div>
        <div
          className="sc-bcXGCL VbuOr"
        >
          <p
            className="sc-bcXGCL bCkqIq cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="sc-bcXGCL dQJkPy cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL hQZIZa"
      >
        <h4
          className="sc-bcXGCL hCBCzh cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="sc-bcXGCL dBUDbw cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`<DebateOpinion /> when the query is on mobile should render a FOR opinion 1`] = `
Array [
  <div
    className="sc-bcXGCL klhoji toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cUzULY toasts-container toasts-container--top-left"
  />,
  <div
    className="sc-bcXGCL gbiIcr toasts-container toasts-container--top-right"
  />,
  <div
    className="sc-bcXGCL iAUFHT toasts-container toasts-container--bottom"
  />,
  <div
    className="sc-bcXGCL egFGdF toasts-container toasts-container--bottom-left"
  />,
  <div
    className="sc-bcXGCL iXsWAS toasts-container toasts-container--bottom-right"
  />,
  <div
    className="sc-bcXGCL jRgIZE cap-card"
  >
    <div
      className="sc-bcXGCL kIDeKu sc-fXqqsB kJyISH cap-tag"
      title=""
    >
      <span
        className="sc-bcXGCL dBdnLI cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="sc-bcXGCL kvrZpm"
    />
    <div
      className="sc-bcXGCL kOvzDP"
    >
      <div
        className="sc-bcXGCL lntwuc"
      >
        <div
          className="sc-bcXGCL jKhGNH sc-ckEbfr jQHsgw cap-avatar"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
          title="Agui le penseur"
        >
          <img
            alt="Agui le penseur"
            className="sc-bcXGCL exSVBv"
            src="<mock-value-for-field-\\"url\\">"
            style={
              Object {
                "objectFit": "cover",
              }
            }
            title="Agui le penseur"
          />
        </div>
        <div
          className="sc-bcXGCL VbuOr"
        >
          <p
            className="sc-bcXGCL bCkqIq cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="sc-bcXGCL dQJkPy cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL hQZIZa"
      >
        <h4
          className="sc-bcXGCL hCBCzh cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="sc-bcXGCL dBUDbw cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
        <button
          className="sc-bcXGCL sc-laZSpB cnvzQc cqMtAY cap-button DebateOpinion___StyledButton-eaqExq bkrrPY"
          onClick={[Function]}
          type="button"
        >
          capco.module.read_more
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`<DebateOpinion /> when the query is on mobile should render with a read more link 1`] = `
Array [
  <div
    className="sc-bcXGCL klhoji toasts-container toasts-container--top"
  />,
  <div
    className="sc-bcXGCL cUzULY toasts-container toasts-container--top-left"
  />,
  <div
    className="sc-bcXGCL gbiIcr toasts-container toasts-container--top-right"
  />,
  <div
    className="sc-bcXGCL iAUFHT toasts-container toasts-container--bottom"
  />,
  <div
    className="sc-bcXGCL egFGdF toasts-container toasts-container--bottom-left"
  />,
  <div
    className="sc-bcXGCL iXsWAS toasts-container toasts-container--bottom-right"
  />,
  <div
    className="sc-bcXGCL enPTBa cap-card"
  >
    <div
      className="sc-bcXGCL kIDeKu sc-fXqqsB kJyISH cap-tag"
      title=""
    >
      <span
        className="sc-bcXGCL dBdnLI cap-text"
      >
        opinion.for
      </span>
    </div>
    <div
      className="sc-bcXGCL kOvzDP"
    >
      <div
        className="sc-bcXGCL lntwuc"
      >
        <div
          className="sc-bcXGCL jKhGNH sc-ckEbfr jQHsgw cap-avatar"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
          title="Agui le penseur"
        >
          <img
            alt="Agui le penseur"
            className="sc-bcXGCL exSVBv"
            src="<mock-value-for-field-\\"url\\">"
            style={
              Object {
                "objectFit": "cover",
              }
            }
            title="Agui le penseur"
          />
        </div>
        <div
          className="sc-bcXGCL VbuOr"
        >
          <p
            className="sc-bcXGCL bCkqIq cap-text"
          >
            Agui le penseur
          </p>
          <p
            className="sc-bcXGCL dQJkPy cap-text"
          >
            Jsuis né dans les favela au brésil
          </p>
        </div>
      </div>
      <div
        className="sc-bcXGCL hQZIZa"
      >
        <h4
          className="sc-bcXGCL hCBCzh cap-heading"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          Je suis pour
        </h4>
        <p
          className="sc-bcXGCL dBUDbw cap-text"
        >
          <div
            className=" ql-editor wysiwyg-render"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Oui, ma gâtée, RS4 gris nardo, bien sûr qu'ils m'ont raté (gros, bien sûr)
    Soleil dans la bulle, sur le Prado, Shifter pro' (Shifter pro')
    Contre-sens (ah), ma chérie, tu es à contre-sens
    Puta, où tu étais quand j'mettais des sept euros d'essence (hein)",
              }
            }
          />
        </p>
        <button
          className="sc-bcXGCL sc-laZSpB cnvzQc cqMtAY cap-button DebateOpinion___StyledButton-eaqExq bkrrPY"
          onClick={[Function]}
          type="button"
        >
          capco.module.read_more
        </button>
      </div>
    </div>
  </div>,
]
`;
